--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "daisyui": "^2.15.0",
     "firebase": "^9.8.1",
     "react": "^18.1.0",
